# scientific_article_analyzer

./: README.md  RESUMO_TECNICO.md  TESTING_STATUS.md  pyproject.toml
scientific_article_analyzer/: .env  .env.example  EVALUATION_REPORT.md  Makefile  OLLAMA_SETUP.md  agent_system.py  docker-compose-oneclick.yml  docker-compose.yml  exemplo_uso.py  main.py  mcp_server.py  ollama.ps1  pytest.ini  requirements.txt  requirements_minimal.txt  requirements_simple.txt  run.ps1  run_test.py  setup_vector_store.ipynb  simple_test.py  start_server.py  test_system.py
scientific_article_analyzer/data/vector_store/: articles.json  embeddings.pkl
scientific_article_analyzer/mcp_server/: __init__.py  __main__.py  enhanced_tools.py  manifest.json  server.py  tools.py  tools_backup.py
scientific_article_analyzer/samples/: README.md  input_article_1.md  output_1.json  review_1.md
scientific_article_analyzer/scripts/: run_all_tests.py  setup_vector_store.py  test_edge_case.py  test_pdf_processing.py  test_url_processing.py
scientific_article_analyzer/src/: __init__.py  article_processor.py  classifier.py  extractor.py  models.py  reviewer.py
scientific_article_analyzer/tests/: __init__.py  test_complete_system.py  test_robust_system.py
scientific_article_analyzer/vector_store/: __init__.py  advanced_store.py  embeddings.py  store.py  store_backup.py
